laborations/lab1/test/bad/bad100.cc
int main () {
	1 + void;
}
